// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Button link unchanged 1`] = `
<div>
  <a
    class="sc-2a588df4-1 izfOXq undefined "
  >
    <span>
      button test
    </span>
  </a>
</div>
`;

exports[`Button renders form Button unchanged 1`] = `
<div>
  <button
    class="sc-2a588df4-2 jKXlfZ undefined "
  >
    <span>
      button test
    </span>
  </button>
</div>
`;
